# voop

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
hardware/: .gitignore  voop.kicad_pro  voop.kicad_sch
ios/: mise.toml  project.yml
ios/Voop.xcodeproj/: project.pbxproj
ios/Voop/App/: ContentView.swift  Info.plist  Voop.entitlements  VoopApp.swift
ios/Voop/Data/BLE/: BLEManager.swift  MCUPeripheral.swift
ios/Voop/Data/Health/: HealthKitService.swift
ios/Voop/Data/Persistence/: PointStore.swift
ios/Voop/Domain/Models/: AppSettings.swift  RawPoint.swift  Ride.swift
ios/Voop/Domain/UseCases/: CalculateMetrics.swift  DetectRides.swift
ios/Voop/Presentation/: AppModel.swift  DemoData.swift  MainView.swift  RideActivityController.swift  RideEndNotifier.swift  RootTabView.swift  SettingsView.swift
ios/Voop/Presentation/DesignSystem/: Formatters.swift
ios/Voop/Presentation/Rides/: RideDetailView.swift
ios/Voop/Presentation/Setup/: SetupView.swift
ios/Voop/Shared/: RideActivityAttributes.swift
ios/VoopTests/: CalculateMetricsTests.swift  DetectRidesTests.swift
ios/VoopWidget/: RideLiveActivity.swift
mcu/: Cargo.toml  build.rs  mise.toml
mcu/.cargo/: config.toml
mcu/src/: battery.rs  ble.rs  clock.rs  gps.rs  imu.rs  irqs.rs  logger.rs  main.rs  power.rs  screen.rs  store.rs  usb.rs
mcu/src/ble/: central.rs  peripheral.rs
protocol-ffi/: mise.toml
protocol/src/: lib.rs
src/: ble.rs  gps.rs  irqs.rs  logger.rs  main.rs  screen.rs  usb.rs
