[package]
name = "bike-computer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4", default-features = false }
static_cell = "2"
heapless = "0.8"
panic-halt = "1.0"
# cpu
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["set-vtor"] }
# embassy — versions matching nrf52840 examples in embassy repo
embassy-executor = { git = "https://github.com/embassy-rs/embassy", features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { git = "https://github.com/embassy-rs/embassy", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "reset-pin-as-gpio"] }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy" }
# usb
embassy-usb = { git = "https://github.com/embassy-rs/embassy" }
# display
ssd1306 = "0.9"
embedded-graphics = "0.8"
display-interface = "0.5"
# gps
nmea = { version = "0.7", default-features = false, features = ["GGA", "GLL", "GSA", "GSV", "RMC", "VTG", "ZDA", "TXT"] }

[profile.release]
opt-level = "s"
panic = "abort"
