[workspace]
members = ["mcu", "protocol", "protocol-ffi"]
# Host-buildable crates only: the firmware needs the thumbv7em target config that
# mcu/.cargo/config.toml applies (build it from mcu/, e.g. `mise run build`) — with
# `default-members = ["mcu"]` a plain `cargo check`/`cargo test` at the root died in
# nrf-sdc-sys trying to build the SoftDevice for macOS.
default-members = ["protocol", "protocol-ffi"]
resolver = "2"

[profile.release]
opt-level = "s"
panic = "abort"
# Nothing in the workspace relies on wrapping arithmetic (CSC wrap math lives in iOS with
# explicit &- operators), so keep the same trap-on-overflow behavior as debug builds instead
# of silently wrapping in the field.
overflow-checks = true

# For the staticlib linked into the iOS app: UniFFI turns unwinding Rust panics into Swift
# errors via catch_unwind — with the firmware's panic=abort a Rust panic would hard-crash
# the whole app instead.
[profile.release-ffi]
inherits = "release"
panic = "unwind"

