[package]
name = "voop"
version = "0.1.0"
edition = "2021"

[features]
# Dev-bench extras, individually selectable; all off in the lean ride build. The modules
# always compile (they're only unspawned) so they can't rot.
#   usb     — USB CDC + the logger that rides on it, plus the always-on HFXO request the
#             USB peripheral needs (~250 µA the lean build doesn't pay).
#   screen  — the Expansion Board OLED (single-digit mA while lit).
#   battery — BAT-net telemetry. Meaningless in the current setup (JST-powered dev board,
#             nothing on the XIAO's BAT net): with USB in, the unloaded charger drives the
#             divider to a fake 3.75-4.18 V sawtooth — the "battery %" is fiction.
usb = []
screen = []
battery = []

[dependencies]
voop-protocol = { path = "../protocol" }

log = { version = "0.4", default-features = false }
static_cell = "2"
heapless = "0.8"
panic-halt = "1.0"
# cpu
cortex-m = { version = "0.7.6" }
cortex-m-rt = { version = "0.7", features = ["set-vtor"] }
# embassy — 0.10 to match nrf-sdc/trouble-host
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.10", features = ["nrf52840", "time-driver-rtc1", "gpiote", "unstable-pac", "reset-pin-as-gpio"] }
embassy-time = { version = "0.5" }
embassy-sync = { version = "0.8" }
embassy-futures = { version = "0.1" }
# usb
embassy-usb = { version = "0.6" }
# display
ssd1306 = "0.9"
embedded-graphics = "0.8"
display-interface = "0.5"
# gps
nmea = { version = "0.7", default-features = false, features = ["RMC"] }
chrono = { version = "0.4", default-features = false }
# ble — nrf-sdc 0.4 is git-only (crates.io has only 0.3)
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "8efd935", features = ["nrf52840", "multirole"] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "8efd935", features = ["critical-section-impl"] }
trouble-host = { version = "0.7", features = ["scan", "gatt", "peripheral", "derive", "log"] }
bt-hci = { version = "0.9", default-features = false }
